[package]
name = "rseek"
version = "0.1.0"
edition = "2021"

[dependencies]
html_parser = "0.7.0"
hyper = { version = "1", features = ["full"] }
bytes = "1.10.1"
http-body-util = "0.1.3"
hyper-util = { version = "0.1", features = ["tokio", "client", "client-legacy", "http1"] }

tokio = { version = "1", features = ["full"] }
